--- a/site/index.html
+++ b/site/index.html
@@ -1,17 +1,264 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Hello Nithin</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>First Site</title>
+    <style>
+        body {
+            background-color: rgb(18, 18, 18);
+            background-repeat: no-repeat;
+            background-attachment: scroll;
+            background-size: cover;
+        }
+
+        @font-face {
+            font-family: 'Valorant';
+            src: url('Valorant Font.ttf');
+        }
+
+        @font-face {
+            font-family: 'Comfortaa';
+            src: url('Comfortaa-VariableFont_wght.ttf');
+        }
+
+        .text {
+            font-family: 'Comfortaa';
+            font-size: 25px;
+            font-weight: 700;
+            padding: 5px;
+            margin-left: 40px;
+            margin-right: 40px;
+            color: rgb(103, 89, 231);
+        }
+
+        .details {
+            font-family: 'Comfortaa';
+            font-size: 16px;
+            letter-spacing: 1px;
+            color: #fff;
+        }
+
+        .ability-name {
+            /* font-family: ; */
+            /* letter-spacing: 2px; */
+            font-size: 25px;
+            padding: 5px;
+            margin-left: 40px;
+            margin-right: 40px;
+            color: rgba(245, 245, 245, 0.671);
+        }
+
+        .heading {
+            font-family: "Comfortaa";
+            font-size: 40px;
+            padding: 5px;
+            /* text-align: center; */
+            font-weight: 700;
+            color: rgba(255, 255, 255, 0.8);
+        }
+
+        .card {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0);
+            padding: 1%;
+        }
+
+        .container {
+            position: relative;
+            text-align: center;
+            color: rgb(255, 255, 255);
+        }
+
+        .bottom {
+            position: absolute;
+            bottom: 5%;
+            align-self: center;
+            left: 50%;
+            font-family: 'Comfortaa';
+            font-size: 50px;
+            opacity: .9;
+            font-weight: 900;
+            color: rgba(255, 255, 255, .8);
+            transform: translate(-50%, -5%);
+            text-align: center;
+        }
+
+        .left {
+            position: absolute;
+            left: 8px;
+            bottom: 16px;
+            align-self: center;
+            color: rgba(255, 255, 255, .8);
+            transform: translate(-50%, -5%);
+            text-align: center;
+        }
+
+        .contain {
+            /* padding: 16px; */
+            color: rgb(18, 18, 18);
+            align-content: center;
+            align-self: center;
+            align-items: center;
+        }
+
+        .contain::after,
+        .row::after {
+            align-self: center;
+            align-items: center;
+            clear: both;
+            display: table;
+        }
+
+        .header {
+            font-family: 'valorant';
+            font-size: 50px;
+            padding: 5px;
+            /* text-align: center; */
+            font-weight: 700;
+            color: rgba(255, 255, 255, 0.8);
+        }
+
+        img {
+            opacity: 0.5;
+        }
+
+        table {
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Hey there, first Web Site</h1>
+    <header>
+        <div class="header">
+            <a href="https://playvalorant.com/en-us/" target="_blank"
+                style="text-decoration: none; color: white;">Valorant</a>
+        </div>
+    </header>
+    <div class="container">
+        <img src="wp6489846-valorant-omen-wallpapers.png" alt="Omen" style="width:100%;" />
+        <div class="bottom">
+            <p>A page dedicated to OMEN</p>
+        </div>
+    </div>
+
+    <div>
+        <p class="text">Omen hunts in the shadows. He renders
+            enemies blind, teleports across the
+            field, then lets paranoia take hold as foes scramble to uncover where it might strike next.
+
+            A man with mysterious origins, Omen is focused on hindering the vision of his enemies with things like an
+            orb
+            that strikes those in his sights with nearsightedness and another that bursts to obscure the vision of
+            everyone
+            nearby. He can also teleport a short distance, or use his ultimate to teleport anywhere on the map as a
+            shadow
+        </p>
+    </div>
+
+    <div class="heading">
+        POWERS
+    </div>
+
+    <br>
+
+    <div>
+        <table>
+            <tr>
+                <th class="card">
+                    <img src="Shrouded_Step.png" alt="shrouded_step" />
+                    <p class="ability-name">Shrouded Step</p>
+                    <p class="details">Equip a shadow walk ability and see its range indicator. Fire to begin a brief
+                        channel, then
+                        teleport to the marked location. Enemies can hear a sound cue at your original location.</p>
+                </th>
+                <th></th>
+                <th></th>
+                <th class="card">
+                    <img src="Paranoia.png" alt="paranoia" />
+                    <p class="ability-name">Paranoia</p>
+                    <p class="details">Instantly fire a shadow projectile forward, briefly reducing the vision range of
+                        all players it
+                        touches. This projectile can pass through walls.</p>
+                </th>
+                <th></th>
+                <th></th>
+                <th class="card">
+                    <img src="Dark_Cover.png" alt="Dark_Cover" />
+                    <p class="ability-name">Dark Cover</p>
+                    <p class="details">Equip a shadow orb and see its range indicator. Fire to throw the shadow orb to
+                        the
+                        marked
+                        location, creating a long-lasting shadow sphere that blocks vision. Hold Alternate Fire while
+                        targeting to move the marker further away. Hold the ability key with targeting to move the
+                        market closer</p>
+                </th>
+                <th></th>
+                <th></th>
+                <th class="card">
+                    <img src="From_the_Shadows.png" alt="From_the_Shadows" />
+                    <p class="ability-name">From the Shadows</p>
+                    <p class="details">Equip a tactical map. Fire to begin teleporting to the selected location. While
+                        teleporting, Omen
+                        will appear as a Shade that can be destroyed by an enemy to cancel his teleport.</p>
+                </th>
+            </tr>
+        </table>
+    </div>
+
+    <br>
+    <br>
+    <div class="heading">Trivia</div>
+    <br>
+
+    <div>
+        <p class="text">
+            Prior to the global launch of Valorant and the end of the Closed Beta, Omen originally had sharp light blue
+            eyes, rather than the current triple vertical slashes on his "face".
+        </p>
+    </div>
+
+    <div class="heading">Update details</div>
+    <br>
+
+    <div class="text" style="color: red;">v0.50</div>
+
+    <div class="text">
+        Dark Cover smoke duration increased 12 >> 15 seconds.
+        Dark Cover smoke projectile speed increased.
+        Dark Cover cooldown increased 30 >> 35 seconds.
+        Especially at high-tier play, we’ve seen Brimstone become the dominant controller and we wanted to give his
+        peers a boost to make them more viable while hopefully maintaining their unique playstyles.
+        <br>
+        <br>
+    </div>
+
+    <div class="text" style="color: red;">v0.49</div>
+
+    <div class="text">
+
+
+        Omen now immediately becomes vulnerable and no longer appears dark after he leaves his alternate shadow form.
+        If you were to find enemy Omen teleporting in, it was often confusing when you should shoot him to get the kill
+        (vs. sending him back). This change is to both account for an invulnerability bug and score some extra points of
+        clarity.
+        The attenuation radius of the arrival sound on Omen's From the Shadows has been reduced to 2250
+        Attenuation is a big word, but the short of it is you have to be closer to Omen to echolocate where he’s
+        teleporting to. We’re trying to give him some spook back since if you do find him, you should now have him dead
+        to rights.
+    </div>
+    <div class="heading">
+        <br></div>
+
+    <footer class="heading" style="font-size: 18px; align-content: center;">
+        <p>Made by <a href="https://www.github.com/ninjaasmoke"
+                style="text-decoration: underline; color: white; font-size: 20px;" class="header" target="_blank">ME</a>
+        </p>
+        <p>Reach me at <a href="mailto:nithins674@gmail.com" target="_blank"
+                style="text-decoration: underline; color: white; font-size: 20px;" class="">my mail</a></p>
+    </footer>
+
 </body>
 
 </html>
