--- a/site/index.html
+++ b/site/index.html
@@ -137,7 +137,7 @@
         </div>
     </header>
     <div class="container">
-        <img src="wp6489846-valorant-omen-wallpapers.png" alt="Omen" style="width:100%;" />
+        <img src="wp6489846-valorant-omen-wallpapers.png" alt="Omen" style="width:100%;" height="100%" />
         <div class="bottom">
             <p>A page dedicated to OMEN</p>
         </div>
