--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Site</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             background-color: rgb(18, 18, 18);
             background-repeat: no-repeat;
@@ -137,7 +141,7 @@
         </div>
     </header>
     <div class="container">
-        <img src="wp6489846-valorant-omen-wallpapers.png" alt="Omen" style="width:100%;" height="100%" />
+        <img src="wp6489846-valorant-omen-wallpapers.png" alt="Omen" style="width:100%; height: 100%;" />
         <div class="bottom">
             <p>A page dedicated to OMEN</p>
         </div>
