--- a/site/index.html
+++ b/site/index.html
@@ -186,8 +186,11 @@
                         all players it
                         touches. This projectile can pass through walls.</p>
                 </th>
-                <th></th>
-                <th></th>
+            </tr>
+        </table>
+        <div><br></div>
+        <table>
+            <tr>
                 <th class="card">
                     <img src="Dark_Cover.png" alt="Dark_Cover" />
                     <p class="ability-name">Dark Cover</p>
