--- a/site/index.html
+++ b/site/index.html
@@ -91,7 +91,7 @@
         .left {
             position: absolute;
             left: 8px;
-            bottom: 16px;
+            bottom: 16pc;
             align-self: center;
             color: rgba(255, 255, 255, .8);
             transform: translate(-50%, -5%);
@@ -177,8 +177,8 @@
                         channel, then
                         teleport to the marked location. Enemies can hear a sound cue at your original location.</p>
                 </th>
-                <th></th>
-                <th></th>
+            </tr>
+            <tr>
                 <th class="card">
                     <img src="Paranoia.png" alt="paranoia" />
                     <p class="ability-name">Paranoia</p>
@@ -187,9 +187,6 @@
                         touches. This projectile can pass through walls.</p>
                 </th>
             </tr>
-        </table>
-        <div><br></div>
-        <table>
             <tr>
                 <th class="card">
                     <img src="Dark_Cover.png" alt="Dark_Cover" />
@@ -201,8 +198,8 @@
                         targeting to move the marker further away. Hold the ability key with targeting to move the
                         market closer</p>
                 </th>
-                <th></th>
-                <th></th>
+            </tr>
+            <tr>
                 <th class="card">
                     <img src="From_the_Shadows.png" alt="From_the_Shadows" />
                     <p class="ability-name">From the Shadows</p>
