--- a/site/index.html
+++ b/site/index.html
@@ -32,8 +32,8 @@
             font-size: 25px;
             font-weight: 700;
             padding: 5px;
-            margin-left: 40px;
-            margin-right: 40px;
+            margin-left: 5px;
+            margin-right: 5px;
             color: rgb(103, 89, 231);
         }
 
@@ -142,7 +142,7 @@
     </header>
     <div class="container">
         <img src="wp6489846-valorant-omen-wallpapers.png" alt="Omen" style="width:100%; height: 100%;" />
-        <div class="bottom">
+        <div class="header">
             <p>A page dedicated to OMEN</p>
         </div>
     </div>
