--- a/site/index.html
+++ b/site/index.html
@@ -66,6 +66,7 @@
         .card {
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0);
             padding: 1%;
+            padding-top: 2%;
         }
 
         .container {
