--- a/site/page2.html
+++ b/site/page2.html
@@ -7,7 +7,7 @@
     <title>Image page</title>
     <style>
         body {
-            /* background-image: url("wp6489846-valorant-omen-wallpapers.png"); */
+            background-image: url("wp6489846-valorant-omen-wallpapers.png");
             background-color: rgb(18, 18, 18);
             background-repeat: no-repeat;
             background-attachment: scroll;
