--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,9 @@
         }
 
         body {
-            background-color: rgb(18, 18, 18);
+            background-image: url("wp6489846-valorant-omen-wallpapers.png");
+            background-blend-mode: overlay;
+            background-color: rgb(18, 18, 18, 1);
             background-repeat: no-repeat;
             background-attachment: scroll;
             background-size: cover;
