--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
 
         body {
             background-image: url("wp6489846-valorant-omen-wallpapers.png");
-            background-blend-mode: overlay;
+            background-blend-mode: lighten;
             background-color: rgb(18, 18, 18, 1);
             background-repeat: no-repeat;
             background-attachment: scroll;
