--- a/site/index.html
+++ b/site/index.html
@@ -5,135 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Site</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        body {
-            background-image: url("wp6489846-valorant-omen-wallpapers.png");
-            background-blend-mode: normal;
-            background-color: rgb(18, 18, 18, 1);
-            background-repeat: no-repeat;
-            background-attachment: scroll;
-            background-size: cover;
-        }
-
-        @font-face {
-            font-family: 'Valorant';
-            src: url('Valorant Font.ttf');
-        }
-
-        @font-face {
-            font-family: 'Comfortaa';
-            src: url('Comfortaa-VariableFont_wght.ttf');
-        }
-
-        .text {
-            font-family: 'Comfortaa';
-            font-size: 25px;
-            font-weight: 700;
-            padding: 5px;
-            margin-left: 5px;
-            margin-right: 5px;
-            color: rgb(103, 89, 231);
-        }
-
-        .details {
-            font-family: 'Comfortaa';
-            font-size: 16px;
-            letter-spacing: 1px;
-            color: #fff;
-        }
-
-        .ability-name {
-            /* font-family: ; */
-            /* letter-spacing: 2px; */
-            font-size: 25px;
-            padding: 5px;
-            margin-left: 40px;
-            margin-right: 40px;
-            color: rgba(245, 245, 245, 0.671);
-        }
-
-        .heading {
-            font-family: "Comfortaa";
-            font-size: 40px;
-            padding: 5px;
-            /* text-align: center; */
-            font-weight: 700;
-            color: rgba(255, 255, 255, 0.8);
-        }
-
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0);
-            padding: 1%;
-            padding-top: 2%;
-        }
-
-        .container {
-            position: relative;
-            text-align: center;
-            color: rgb(255, 255, 255);
-        }
-
-        .bottom {
-            position: absolute;
-            bottom: 5%;
-            align-self: center;
-            left: 50%;
-            font-family: 'Comfortaa';
-            font-size: 50px;
-            opacity: .9;
-            font-weight: 900;
-            color: rgba(255, 255, 255, .8);
-            transform: translate(-50%, -5%);
-            text-align: center;
-        }
-
-        .left {
-            position: absolute;
-            left: 8px;
-            bottom: 16pc;
-            align-self: center;
-            color: rgba(255, 255, 255, .8);
-            transform: translate(-50%, -5%);
-            text-align: center;
-        }
-
-        .contain {
-            /* padding: 16px; */
-            color: rgb(18, 18, 18);
-            align-content: center;
-            align-self: center;
-            align-items: center;
-        }
-
-        .contain::after,
-        .row::after {
-            align-self: center;
-            align-items: center;
-            clear: both;
-            display: table;
-        }
-
-        .header {
-            font-family: 'valorant';
-            font-size: 50px;
-            padding: 5px;
-            /* text-align: center; */
-            font-weight: 700;
-            color: rgba(255, 255, 255, 0.8);
-        }
-
-        img {
-            opacity: 0.9;
-        }
-
-        table {
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
