--- a/site/CSS/style placement/index.html
+++ b/site/CSS/style placement/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Heading from linked css file</h1>
+    <h1><span>Heading from linked css file</span></h1>
     <p>Paragraph from linked css file</p>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ipsum dolorem voluptates inventore deleniti
