--- a/site/index.html
+++ b/site/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <img src="wp6489846-valorant-omen-wallpapers.png" alt="Omen" style="width:100%; height: 100%;" />
         <div class="header">
-            <p>A page dedicated to OMEN</p>
+            <p>OMEN</p>
         </div>
     </div>
 
