--- a/site/bootstrap/index.html
+++ b/site/bootstrap/index.html
@@ -11,8 +11,23 @@
 </head>
 
 <body>
-    <h1>Hello Nithin!</h1>
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4">Col 1</div>
+            <div class="col-md-4">Col 2</div>
+            <div class="col-md-4">Col 3</div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-sm-6">Col 1</div>
+            <div class="col-md-4 col-sm-6">Col 2</div>
+            <div class="col-md-4 col-sm-6">Col 3</div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">Col 1</div>
+            <div class="col-xs-6">Col 2</div>
+            <div class="col-xs-6">Col 3</div>
+        </div>
+    </div>
     <script src="js/3.5.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
