--- a/simp.html
+++ b/simp.html
@@ -18,7 +18,7 @@
     <div class="container">
         <img src="wp6489846-valorant-omen-wallpapers.png" alt="Omen" style="width:100%; height: 100%;" />
         <div class="header">
-            <p>OMEN</p>
+            <p onclick="alert('A phantom of memory')">OMEN</p>
         </div>
     </div>
 
