--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <p class="filler">Ester Egg</p>
     </div>
     <section>
-        <div class="heading">Trivia</div>
+        <div class="heading">TRIVIA</div>
     </section>
     <div>
         <p class="text" style="text-align: left;">
@@ -93,7 +93,7 @@
             eyes, rather than the current triple vertical slashes on his "face".
         </p>
     </div>
-    <div class="heading">Update details</div>
+    <div class="heading">UPDATE DETAILS</div>
     <div class="text" style="color: red; text-align: start;">v0.50</div>
     <div class="text" style="text-align: left;">
         Dark Cover smoke duration increased 12 >> 15 seconds.
