--- a/site/module-3-assignment/index.html
+++ b/site/module-3-assignment/index.html
@@ -126,6 +126,8 @@
                 </div>
             </div>
         </div>
+        <!--end of Row-->
+        <div class="text-center" id="note">Note: this also contains OPTIONAL assignment content</div>
     </div>
     <!--End of container-->
 </body>
