--- a/site/module-3-assignment/index.html
+++ b/site/module-3-assignment/index.html
@@ -46,7 +46,7 @@
             <h1>Our Menu</h1>
         </div>
         <div class="row">
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="dish" id="chicken">
                     <div class="tag">Only $2.99</div>
                     <h1>Chicken</h1>
@@ -73,7 +73,7 @@
 
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="dish" id="beef">
                     <div class="tag">Only $7.99</div>
                     <h1>Beef</h1>
@@ -99,7 +99,7 @@
                     <a href="#top">Back to top</a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-12">
+            <div class="col-md-4 col-sm-12 col-xs-12">
                 <div class="dish" id="shushi">
                     <div class="tag">Only $5.99</div>
                     <h1>Shushi</h1>
