--- a/site/module-3-assignment/index.html
+++ b/site/module-3-assignment/index.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Food LLC</a>
-        <button class="navbar-toggler d-lg-none d-md-none" type="button" data-toggle="collapse"
+        <button class="navbar-toggler d-lg-none d-md-none d-sm-none" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
