--- a/site/module-4-assignment/index.html
+++ b/site/module-4-assignment/index.html
@@ -4,14 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Module 4</title>
+    <script>
+        var names = [];
+    </script>
+    <script src="js/SpeakHello.js"></script>
+    <script src="js/SpeakGoodBye.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/script2.js"></script>
-    <script src="js/app.js"></script>
-    <title>JavaScript</title>
 </head>
 
 <body>
-    <h1>Heading for JavaScript</h1>
+
+    <h1>This is "HARDER" assignment</h1>
+
 </body>
 
 </html>
