--- a/site/module-4-assignment/index.html
+++ b/site/module-4-assignment/index.html
@@ -17,6 +17,7 @@
 
     <h1>This is "HARDER" assignment</h1>
     <p>Please ignore the FAVICON error message</p>
+    <p>Open "inspect", click console, check answer, check sources</p>
 
 </body>
 
