--- a/site/ajax/index.html
+++ b/site/ajax/index.html
@@ -4,16 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/ajax-utils.js"></script>
     <script src="js/script.js"></script>
-    <title>JavaScript</title>
+    <title>AJAX</title>
 </head>
 
 <body>
-    <h1 id="title">Heading for JavaScript</h1>
+
+    <h1 id="title">Ajax Introduction</h1>
+
     <p>
-        Say hello to
-        <input type="text" id="name">
-        <button>Say it</button>
+        <button>
+            Say Hello to someone on the
+            Server!
+        </button>
     </p>
 
     <div id="content"></div>
